--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "dependencies": {
     "@types/express": "^4.17.13",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "puppeteer": "^13.4.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.1",
