--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "author": "Renzo Sevilha <sevilharenzo@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon --watch 'src/' --exec 'ts-node src/app.ts' -e ts"
+  },
   "dependencies": {
     "@types/express": "^4.17.13",
     "express": "^4.17.3",
@@ -15,6 +18,7 @@
     "@typescript-eslint/parser": "^5.12.1",
     "eslint": "^8.10.0",
     "nodemon": "^2.0.15",
-    "ts-node": "^10.5.0"
+    "ts-node": "^10.5.0",
+    "typescript": "^4.5.5"
   }
 }
