--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "dev-api": "nodemon --watch 'src/' --exec 'ts-node api/src/app.ts' -e ts",
-    "dev-cron": "nodemon --watch 'src/' --exec 'ts-node cron/src/index.ts' -e ts"
+    "dev-cron": "ts-node cron/src/index.ts"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
