--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "express": "^4.17.3",
+    "mongoose": "^6.2.4",
     "puppeteer": "^13.4.0"
   },
   "devDependencies": {
