--- a/package.json
+++ b/package.json
@@ -1,26 +1,6 @@
 {
-  "name": "kiev",
-  "version": "1.0.0",
-  "description": "API which scrap informations about Russia-Ukraine Conflict",
-  "main": "index.js",
-  "author": "Renzo Sevilha <sevilharenzo@gmail.com>",
-  "license": "MIT",
-  "scripts": {
-    "dev-api": "nodemon --watch 'src/' --exec 'ts-node api/src/app.ts' -e ts",
-    "dev-cron": "ts-node cron/src/index.ts"
-  },
-  "dependencies": {
-    "@types/express": "^4.17.13",
-    "express": "^4.17.3",
-    "mongoose": "^6.2.4",
-    "puppeteer": "^13.4.0"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.12.1",
-    "@typescript-eslint/parser": "^5.12.1",
-    "eslint": "^8.10.0",
-    "nodemon": "^2.0.15",
-    "ts-node": "^10.5.0",
-    "typescript": "^4.5.5"
-  }
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ]
 }
